# pg-to-sqlite3

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
scripts/: test.sh
src/: cli.rs  main.rs  notes.md  pg.rs  sqlite.rs
src/pg/: depend.rs  dump.rs  introspection.rs  mod.rs  object_types.rs  query.rs  validate.rs
src/pg/queries/: all_fk_constraints.sql  all_pk_constraints.sql  all_unique_constraints.sql  list_relations_in_schema.sql  table_definitions.sql  view_definitions.sql  view_usage.sql
tests/: README.md
tests/fixtures/fs_db/: 00_schema.sql  01_data.p.sql  Dockerfile
