[package]
name = "pg-to-sqlite3"
version = "0.1.0"
authors = ["Steven Kalt <kalt.steven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.0"
postgres-types = "0.2.0"
clap = "2.33.3"
petgraph = "0.5.1"
fallible-iterator = "0.2.0"
indicatif = "0.15.0"
[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]
# validator = "0.12.0"
# termcolor = "1.1.0"   
